--- a/pack.properties
+++ b/pack.properties
@@ -1,4 +1,4 @@
-displayName=VGAscape
-compatibleVersion=1.7.8
+displayName=VGAscape-dark
+compatibleVersion=1.7.8.3
 author=gonekittywild
-tags= pixel, resizeable, retro, beige, brown, light
+tags= pixel, resizeable, retro, dark
